@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.46">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.47">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -25,10 +25,11 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.46 [20230309]:
-- Added connection to the tile in find relation and linting
-- Added some fixes
-- Fixed Skip Outro
+Changelog 0.3.47 [20230310]:
+- Made Nya Alt easier for Verizon Users
+- Added New Setting "Preferred Subtitle Language"
+- Renamed "Preferred Audio Stream"
+- Renamed "Preferred Stream Source"
     </news>
   </extension>
 </addon>
