@@ -20,8 +20,8 @@
 		<setting id="contentorigin.menu" type="enum" subsetting="true" label="40419" lvalues="40420|40421|40422|40423" default="0" visible="eq(-1,true)"/>
 		<setting id="sep"/>
 		<setting id="general.icons" type="enum" label="40388" lvalues="40389|40390" default="0"/>
-		<setting id="scraping.fanart" type="bool" label="40437" default="false" />
-		<setting id="scraping.clearlogo" type="bool" label="40438" default="false" />
+		<setting id="scraping.fanart" type="bool" label="40433" default="false" />
+		<setting id="scraping.clearlogo" type="bool" label="40434" default="false" />
 		<!--
 		<setting id="contenttype.seasons" type="labelenum" label="- Seasons content type" values="seasons|tvshows" default="tvshows" visible="eq(-2,true)"/>
 		<setting id="contenttype.episodes" type="labelenum" label="- Episodes content type" values="episodes|tvshows" default="tvshows" visible="eq(-3,true)"/>
@@ -34,8 +34,8 @@
 
 	<!-- Provider -->
 	<category label="40226">
-		<setting id="provider.nyaa" type="bool" label="Nyaa" default="true" />
-		<setting id="provider.nyaaalt" type="bool" label="Nyaa Alt (For Verizon Users)" default="false" visible="eq(-1,false)"/>
+		<setting id="provider.nyaa" type="bool" label="Nyaa" default="true" enable="eq(1,false)" />
+		<setting id="provider.nyaaalt" type="bool" label="Nyaa Alt (For Verizon Users)" default="false" enable="eq(-1,false)" />
 		<setting id="provider.animix" type="bool" label="Animix" default="true" />
 		<setting id="provider.animepahe" type="bool" label="Animepahe" default="true" />
 		<setting id="provider.gogo" type="bool" label="Gogo" default="true" />
@@ -57,9 +57,10 @@
 		<setting type="lsep" label="40313" />
 		<setting type="sep"/>
 		<setting id="general.audio" type="enum" label="40314" default="40315" lvalues="40315|40316" />
+		<setting id="general.subtitles" type="enum" label="40435" default="40436" lvalues="40436|40437|40438|40439|40440|40441|40442|40443|40444|40445|40446|40447|40448|40449|40450|40451|40452|40453|40454" />
 		<setting id="general.source" type="labelenum" label="40330" default="Sub" values="Sub|Dub|Both" />
 		<setting id="general.sourcesort" type="labelenum" label="40333" default="Random" values="Random|Sub|Dub" visible="eq(-1,Both)" />
-		<setting id="general.subtitles" type="bool" label="40427" default="false"/>
+		<setting id="general.dubsubtitles" type="bool" label="40427" default="false"/>
 
 		<!-- Next Episode Dialog -->
 		<setting type="lsep" label="40317" />
